infrastructure/services/security_groups.tf
/**
 * PURPOSE: Network Security and Traffic Control.
 * This file defines the firewall rules for the Orchestration Layer and its
 * private connectivity to AWS services. All rules should follow the principle of
 * least privilege, restricting traffic to specific security group IDs.
 */

# ============= DATA LOOKUPS =======================================================
# Fetch the shared endpoints security group (execute-api, logs, sts) created in vpc.tf
data "aws_security_group" "shared_endpoints" {
  vpc_id = local.vpc_id
  name   = "shared-endpoints-sg"
}

# ============= SECURITY GROUPS ===================================================
# ORCHESTRATOR SECURITY GROUP
# Controls traffic for the Lambda-based logic layer.
resource "aws_security_group" "orchestrator" {
  name        = "${var.environment}-orchestrator-sg"
  description = "Security group for the Orchestration Layer for environment: ${var.environment}"
  vpc_id      = local.vpc_id

  tags = {
    Name = "${var.environment}-orchestrator-sg"
  }
}

# VPC ENDPOINTS SECURITY GROUP
# Provides a secure ingress point for the Orchestrator and RDS Seeder to reach all AWS Services.
resource "aws_security_group" "vpc_endpoints" {
  name        = "${var.environment}-vpc-endpoints-sg"
  description = "Private interface for the Orchestrator to reach Bedrock and Secrets Manager"
  vpc_id      = local.vpc_id

  tags = {
    Name = "${var.environment}-vpc-endpoints-sg"
  }
}

# SECRETS MANAGER SECURITY GROUP
# Provides a secure ingress point for RDS Init to access the secrets manager VPC endpoint only
resource "aws_security_group" "secrets_manager" {
  name        = "${var.environment}-secrets-manager-sg"
  description = "Private interface for RDS Init to reach Secrets Manager"
  vpc_id      = local.vpc_id

  tags = {
    Name = "${var.environment}-secrets-manager-sg"
  }
}

# BEDROCK SECURITY GROUP
# Provides a secure ingress point for RDS Tool to access the Bedrock VPC endpoint only
resource "aws_security_group" "bedrock" {
  name        = "${var.environment}-bedrock-sg"
  description = "Private interface for the RDS Tool to reach Bedrock"
  vpc_id      = local.vpc_id

  tags = {
    Name = "${var.environment}-bedrock-sg"
  }
}

# RDS METADATA STORE SECURITY GROUP
# Firewall for the RDS instance hosting department contact metadata.
resource "aws_security_group" "rds_metadata" {
  name        = "${var.environment}-rds-metadata-sg-v2"
  description = "Allows authorized data services to query the Department Contacts database"
  vpc_id      = local.vpc_id

  tags = {
    Name = "${var.environment}-rds-metadata-sg-v2"
  }
}

# RDS SEEDER SECURITY GROUP
# Group for the RDS Seeder Lambda (MCP Server).
resource "aws_security_group" "rds_seeder_sg" {
  name        = "${var.environment}-rds-seeder-sg"
  description = "Allows Data Services to reach RDS and AWS Services"
  vpc_id      = local.vpc_id
  tags = {
    Name = "${var.environment}-rds-seeder-sg"
  }
}

# RDS TOOL SECURITY GROUP
# Group for the RDS Tool Lambda (MCP Server).
resource "aws_security_group" "rds_tool_sg" {
  name        = "${var.environment}-rds-tool-sg"
  description = "Allows RDS Tool to reach RDS and AWS Services"
  vpc_id      = local.vpc_id
  tags = {
    Name = "${var.environment}-rds-tool-sg"
  }
}

# RDS INIT SECURITY GROUP
# Group for the RDS Init Lambda (MCP Server).
resource "aws_security_group" "rds_init_sg" {
  name        = "${var.environment}-rds-init-sg"
  description = "Allows RDS Init to reach RDS and AWS Services"
  vpc_id      = local.vpc_id
  tags = {
    Name = "${var.environment}-rds-init-sg"
  }
}

# KB SYNC SECURITY GROUP
# Group for the Knowledge Base synchronisation pipeline.
resource "aws_security_group" "kb_sync_sg" {
  name        = "${var.environment}-kb-sync-sg"
  description = "Security group for KB Sync Lambdas to access RDS and Bedrock"
  vpc_id      = local.vpc_id

  tags = {
    Name = "${var.environment}-kb-sync-sg"
  }
}

# CONTENT GURU AUTHORISER SECURITY GROUP
# Group for the Content Guru webhook authoriser Lambda.
resource "aws_security_group" "crm_contentguru_wh_authorizer" {
  name        = "${var.environment}-crm-contentguru-wh-authorizer-sg"
  description = "Security group for Content Guru webhook authoriser Lambda"
  vpc_id      = local.vpc_id

  tags = {
    Name = "${var.environment}-crm-contentguru-wh-authorizer-sg"
  }
}

# ============ INGRESS RULES ======================================================

# Ingress rule allowing HTTPS traffic from the Orchestrator to VPC Endpoints.
resource "aws_vpc_security_group_ingress_rule" "allow_orchestrator_to_endpoints" {
  description                  = "HTTPS from Orchestrator"
  from_port                    = 443
  to_port                      = 443
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.vpc_endpoints.id
  referenced_security_group_id = aws_security_group.orchestrator.id
}

# Allow Tooling & Seeder to reach RDS
resource "aws_vpc_security_group_ingress_rule" "allow_rds_seeder_to_rds" {
  description                  = "PostgreSQL from RDS Seeder"
  from_port                    = 5432
  to_port                      = 5432
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.rds_metadata.id
  referenced_security_group_id = aws_security_group.rds_seeder_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_rds_tool_to_rds" {
  description                  = "PostgreSQL from RDS Tool"
  from_port                    = 5432
  to_port                      = 5432
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.rds_metadata.id
  referenced_security_group_id = aws_security_group.rds_tool_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_rds_init_to_rds" {
  description                  = "PostgreSQL from RDS Init"
  from_port                    = 5432
  to_port                      = 5432
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.rds_metadata.id
  referenced_security_group_id = aws_security_group.rds_init_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_kb_sync_to_rds" {
  description                  = "PostgreSQL from KB Sync Pipeline"
  from_port                    = 5432
  to_port                      = 5432
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.rds_metadata.id
  referenced_security_group_id = aws_security_group.kb_sync_sg.id
}

# ----- Ingress rules allowing authorised data services to reach AWS service endpoints. -----

resource "aws_vpc_security_group_ingress_rule" "allow_rds_seeder_to_endpoints" {
  description                  = "Allow RDS seeder to reach Bedrock/SecretsManager endpoints"
  from_port                    = 443
  to_port                      = 443
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.vpc_endpoints.id
  referenced_security_group_id = aws_security_group.rds_seeder_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_rds_tool_to_bedrock" {
  description                  = "Allow RDS query tool to reach Bedrock endpoint"
  from_port                    = 443
  to_port                      = 443
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.bedrock.id
  referenced_security_group_id = aws_security_group.rds_tool_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_rds_init_to_secrets_manager" {
  description                  = "Allow RDS init tool to reach SecretsManager endpoint"
  from_port                    = 443
  to_port                      = 443
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.secrets_manager.id
  referenced_security_group_id = aws_security_group.rds_init_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_kb_sync_to_endpoints" {
  description                  = "Allow KB sync pipeline to reach Bedrock/SecretsManager endpoints"
  from_port                    = 443
  to_port                      = 443
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.vpc_endpoints.id
  referenced_security_group_id = aws_security_group.kb_sync_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_crm_authorizer_to_secrets_manager" {
  description                  = "Allow Content Guru authoriser to reach SecretsManager endpoint"
  from_port                    = 443
  to_port                      = 443
  ip_protocol                  = "tcp"
  security_group_id            = aws_security_group.secrets_manager.id
  referenced_security_group_id = aws_security_group.crm_contentguru_wh_authorizer.id
}

# ======================= EGRESS RULES (INTERNAL) ===========================================

resource "aws_vpc_security_group_egress_rule" "allow_rds_init_to_rds" {
  description                  = "Allow outbound traffic from RDS Init to RDS"
  security_group_id            = aws_security_group.rds_init_sg.id
  referenced_security_group_id = aws_security_group.rds_metadata.id
  ip_protocol                  = "tcp"
  from_port                    = 5432
  to_port                      = 5432
}

resource "aws_vpc_security_group_egress_rule" "allow_rds_seeder_to_rds" {
  description                  = "Allow outbound traffic from RDS Seeder to RDS"
  security_group_id            = aws_security_group.rds_seeder_sg.id
  referenced_security_group_id = aws_security_group.rds_metadata.id
  ip_protocol                  = "tcp"
  from_port                    = 5432
  to_port                      = 5432
}

resource "aws_vpc_security_group_egress_rule" "allow_rds_tool_to_rds" {
  description                  = "Allow outbound traffic from RDS Tool to RDS"
  security_group_id            = aws_security_group.rds_tool_sg.id
  referenced_security_group_id = aws_security_group.rds_metadata.id
  ip_protocol                  = "tcp"
  from_port                    = 5432
  to_port                      = 5432
}

resource "aws_vpc_security_group_egress_rule" "allow_rds_init_to_secrets_manager" {
  description                  = "Allow outbound traffic from RDS Init to Secrets Manager"
  security_group_id            = aws_security_group.rds_init_sg.id
  referenced_security_group_id = aws_security_group.secrets_manager.id
  ip_protocol                  = "tcp"
  from_port                    = 443
  to_port                      = 443
}

resource "aws_vpc_security_group_egress_rule" "allow_rds_seeder_to_vpc_endpoints" {
  description                  = "Allow outbound traffic from RDS Seeder to VPC endpoints"
  security_group_id            = aws_security_group.rds_seeder_sg.id
  referenced_security_group_id = aws_security_group.vpc_endpoints.id
  ip_protocol                  = "tcp"
  from_port                    = 443
  to_port                      = 443
}

resource "aws_vpc_security_group_egress_rule" "allow_rds_tool_to_bedrock" {
  description                  = "Allow outbound traffic from RDS Tool to Bedrock"
  security_group_id            = aws_security_group.rds_tool_sg.id
  referenced_security_group_id = aws_security_group.bedrock.id
  ip_protocol                  = "tcp"
  from_port                    = 443
  to_port                      = 443
}

# Allow orchestrator to VPC endpoints (Bedrock / SecretsManager)
resource "aws_vpc_security_group_egress_rule" "allow_orchestrator_to_vpc_endpoints" {
  description                  = "Allow outbound traffic from Orchestrator to VPC endpoints"
  security_group_id            = aws_security_group.orchestrator.id
  referenced_security_group_id = aws_security_group.vpc_endpoints.id
  ip_protocol                  = "tcp"
  from_port                    = 443
  to_port                      = 443
}

# Allow orchestrator to shared VPC endpoints (execute-api, logs, sts)
resource "aws_vpc_security_group_egress_rule" "allow_orchestrator_to_shared_endpoints" {
  description                  = "Allow outbound traffic from Orchestrator to shared VPC endpoints"
  security_group_id            = aws_security_group.orchestrator.id
  referenced_security_group_id = data.aws_security_group.shared_endpoints.id
  ip_protocol                  = "tcp"
  from_port                    = 443
  to_port                      = 443
}

# Allow KB Sync Lambdas to RDS
resource "aws_vpc_security_group_egress_rule" "allow_kb_sync_lambdas_to_RDS" {
  description                  = "Allow outbound traffic from KB Sync Lambdas to RDS"
  security_group_id            = aws_security_group.kb_sync_sg.id
  referenced_security_group_id = aws_security_group.rds_metadata.id
  ip_protocol                  = "tcp"
  from_port                    = 5432
  to_port                      = 5432
}

# Allow KB Sync Lambdas to Bedrock
resource "aws_vpc_security_group_egress_rule" "allow_kb_sync_lambdas_to_bedrock" {
  description                  = "Allow outbound traffic from KB Sync Lambdas to Bedrock"
  security_group_id            = aws_security_group.kb_sync_sg.id
  referenced_security_group_id = aws_security_group.bedrock.id
  ip_protocol                  = "tcp"
  from_port                    = 443
  to_port                      = 443
}

resource "aws_vpc_security_group_egress_rule" "allow_crm_authorizer_to_secrets_manager" {
  description                  = "Allow outbound traffic from Content Guru authoriser to Secrets Manager"
  security_group_id            = aws_security_group.crm_contentguru_wh_authorizer.id
  referenced_security_group_id = aws_security_group.secrets_manager.id
  ip_protocol                  = "tcp"
  from_port                    = 443
  to_port                      = 443
}

# ========================= EGRESS RULES (EXTERNAL) ==================================

# Fetch the official AWS-managed S3 prefix list
data "aws_prefix_list" "s3" {
  name = "com.amazonaws.${var.aws_region}.s3"
}

# Allow external egress from RDS seeder to S3 only, by referencing the AWS-managed S3 prefix list
resource "aws_vpc_security_group_egress_rule" "rds_seeder_external_https" {
  security_group_id = aws_security_group.rds_seeder_sg.id
  ip_protocol       = "tcp"
  from_port         = 443
  to_port           = 443
  prefix_list_id    = data.aws_prefix_list.s3.id
}

# Allow Orchestrator to reach S3 to download code payload zip
resource "aws_vpc_security_group_egress_rule" "allow_orchestrator_to_s3" {
  description       = "Allow Orchestrator to fetch deployment artifact from S3"
  security_group_id = aws_security_group.orchestrator.id
  ip_protocol       = "tcp"
  from_port         = 443
  to_port           = 443
  prefix_list_id    = data.aws_prefix_list.s3.id
}

# resource "aws_vpc_security_group_ingress_rule" "allow_shared_endpoints_ingress_from_orchestrator" {
#   description                  = "Allow incoming HTTPS from Orchestrator"
#   security_group_id            = data.aws_security_group.shared_endpoints.id
#   referenced_security_group_id = aws_security_group.orchestrator.id
#   ip_protocol                  = "tcp"
#   from_port                    = 443
#   to_port                      = 443
# }

# Allow Orchestrator to reach public HTTPS endpoints (API Gateway) via NAT Gateway
resource "aws_vpc_security_group_egress_rule" "allow_orchestrator_to_internet_https" {
  description       = "Allow outbound HTTPS traffic to public internet via NAT Gateway"
  security_group_id = aws_security_group.orchestrator.id
  ip_protocol       = "tcp"
  from_port         = 443
  to_port           = 443
  cidr_ipv4         = "0.0.0.0/0"
}
